<resources>
    <string name="app_name">Event List</string>
    <string name="create_event">Create Event</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="img">img</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="select_end_time">Select end time</string>
    <string name="end_time">End time</string>
    <string name="select_start_time">Select start time</string>
    <string name="start_time">Start time</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="create_an_event">Create an Event</string>
    <string name="location">Location</string>
    <string name="update_an_event">Update an Event</string>
</resources>
